:bug: fix: apply mobile and cross browser fixes.
  - Sets viewport width on mobile devices.
  - Removes dependency on Promises (which aren't supported in all modern
    browsers).
  - Fixes a bunch of cross-browser flexbox issues.
  - Fixes some scrollbar issues.
  - Reduces the size of the github ribbon at narrow widths.
  - Ensures that syntax highlighting works across browsers.

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -103,6 +103,10 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
+/* Cross-browser support of CSS-hidden iframe scrollbars */
+iframe[scrolling='no'] {
+  overflow: hidden;
+}
 /* Site Styles */
 html {
   box-sizing: border-box;
@@ -124,8 +128,10 @@ body {
 }
 .header {
   text-align: center;
-  margin: 6px;
+  margin: 6px 16px;
   border: 1px solid transparent;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 .title {
   font-family: 'Ubuntu', 'Source Sans Pro', Verdana, sans-serif;
@@ -208,6 +214,8 @@ input[type="radio"]:checked + .label-webanimations { color: #E44D26; }
   position: relative;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+  /* Solves a Firefox issue. See: http://stackoverflow.com/a/29400042/1154642 */
+  min-height: 0;
 }
 .pane {
   width: 50%;
@@ -225,9 +233,17 @@ input[type="radio"]:checked + .label-webanimations { color: #E44D26; }
           justify-content: center;
 }
 .source-pane {
-  overflow-y: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
 .source-pane > pre {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   background-color: #292929;
   border-left: 11px solid #383838;
   color: #f7f7f7;
@@ -235,9 +251,8 @@ input[type="radio"]:checked + .label-webanimations { color: #E44D26; }
   font-size: 0.9em;
   line-height: 1.4;
   margin: 0;
-  overflow-x: scroll;
+  overflow: scroll;
   padding: 3em 0.5em 0.5em 0.7em;
-  height: 100%;
 }
 code {
   font-family: inherit;
